# senti

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  README.md  app.py  package-lock.json  package.json  pyproject.toml  railway.toml  render.yaml  response.json  test_mathematical_analysis.py  vercel.json
.streamlit/: config.toml
SentimentSphere/: app.py  pyproject.toml
SentimentSphere/attached_assets/: Pasted-ValueError-Invalid-property-specified-for-object-of-type-plotly-graph-objs-layout-YAxis-titlefont-1744153667576.txt
SentimentSphere/data/: 186b9160-2887-4fbc-8265-dbcaa21a7695.json  1f37aae0-335d-47a1-8579-693ca0e6b763.json  599dcc50-4f74-4f19-b045-9a8f77603396.json  a4a1aeda-236d-43c7-94a1-4e4a46b76b53.json
SentimentSphere/utils/: config.py  external_data.py  openai_client.py  sentiment_generator.py  visualizations.py
attached_assets/: Pasted-ValueError-Invalid-property-specified-for-object-of-type-plotly-graph-objs-layout-YAxis-titlefont-1744155394239.txt
data/: 513341b3-ed48-4ab3-a045-1736f032f2a6.json  ad99fe1f-b7f5-4e9d-9147-4a2422d9307f.json
data/analyses/: 3d51f638-308b-4c87-8c94-3a05026f0287.json  db2a7a5a-29dd-449f-9ad8-c67f2689a538.json  (+2 more)
newsentimizerfrontend/: package-lock.json  package.json
scripts/: deploy-prebuilt.sh
sentiment-sphere/: .vercelignore  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
utils/: __init__.py  config.py  data_manager.py  external_data.py  google_trends_scraper.py  openai_client.py  text_processor.py  visualizations.py
(+325 files in other folders)
