[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "openai>=1.72.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pycountry>=24.6.1",
    "pypdf2>=3.0.1",
    "streamlit-lottie>=0.0.5",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
    "requests>=2.32.3",
    "pytrends>=4.9.2",
    "twilio>=9.5.2",
    "praw>=7.8.1",
]
